# Projects

./: README.md
calculator/src/: main.rs
celsium-fahrenheit/: Cargo.toml
celsium-fahrenheit/src/: main.rs
datentypen/: Cargo.toml
datentypen/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
pokedex/: Cargo.toml  README.md  pokemon.json
pokedex/src/: lib.rs  main.rs  poke_info.rs  search.rs
print_slow_fn/: Cargo.toml
print_slow_fn/src/: main.rs
quadrieren/: Cargo.toml
quadrieren/src/: main.rs
rgb565/: Cargo.toml
rgb565/src/: main.rs
rust-logo/: Cargo.toml
rust-logo/src/assets/rust-logo-10c/: rust1.raw  rust10.raw  rust11.raw  rust12.raw  rust13.raw  rust14.raw  rust15.raw  rust16.raw  rust17.raw  rust18.raw  rust19.raw  rust2.raw  rust20.raw  rust21.raw  rust22.raw  rust23.raw  rust24.raw  rust25.raw  rust26.raw  rust27.raw  rust28.raw  rust29.raw  rust3.raw  rust30.raw  rust31.raw  rust32.raw  rust33.raw  rust34.raw  rust35.raw  rust36.raw  rust4.raw  rust5.raw  rust6.raw  rust7.raw  rust8.raw  rust9.raw
st7735_simulator/: Cargo.toml
st7735_simulator/assets/: steckbrief.raw
st7735_simulator/src/: main.rs
twelve_days_of_christmas/: Cargo.toml
twelve_days_of_christmas/src/: main.rs
