[package]
edition      = "2024"
name         = "rust-logo"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "rust-logo"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
embedded-graphics = "0.8.1"
embedded-text = "0.7.1"
profont = "0.7.0"
embedded-hal = "1.0.0"
st7735-lcd = "0.10.0"
fugit = "0.3.9"
embedded-hal-bus = "0.3.0"

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

critical-section = "1.2.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }


[patch.crates-io]
esp-synopsys-usb-otg = { git = "https://github.com/esp-rs-compat/synopsys-usb-otg", branch = "esp32sx" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
